# H264Sharp

./: .editorconfig  CMakeLists.txt  CMakePresets.json  OpenH264Wrapper2.sln  README.md
C++CLI/Converter/: Converter.cpp  Converter.h  Converter.vcxproj
C++CLI/Examples/H264SharpCLIdotNET/: H264SharpCLI.NET-Test.csproj  Program.cs
C++CLI/Examples/H264SharpNetFramework/: H264SharpCLI.NetFramework-Test.csproj  Program.cs
C++CLI/Examples/H264SharpNetFramework/Properties/: AssemblyInfo.cs
C++CLI/H264SharpCLI/: AssemblyInfo.cpp  EncodedFrame.h  Encoder.cpp  H264Sharp.vcxproj  H264SharpCore.vcxproj  Source.cpp  codec_api.h  pch.h
Converter/: Converter.vcxproj  Converter.vcxproj.filters  yuv_rgb.cpp
CrossPlatformTest/: CrossPlatformTest.csproj  Program.cs
EncoderTest/: EncoderTest.csproj  Program.cs
EncoderTest/Properties/: AssemblyInfo.cs
Examples/AVRecord/: AVRecord.csproj  AviWriter.cs  MainWindow.xaml  MainWindow.xaml.cs  RiffFile.cs
Examples/CamCapture/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
Examples/CrossPlatformTest/: CrossPlatformTest.csproj  Program.cs  config.json
Examples/CrossPlatformTest/Properties/: launchSettings.json
Examples/H264SharpBenchmark/: Helper.cs  Program.cs  config.json
Examples/H264SharpBenchmark/Properties/: launchSettings.json
Examples/H264SharpCLIdotNET/: H264SharpCLIdotNET.csproj
Examples/H264SharpNativePInvoke/: H264SharpNativePInvoke.csproj  Helper.cs  Program.cs  config.json
H264Sharp/: Converter.cs  Converter.lib  ConverterLocal.cpp  ConverterLocal.h  Data.cs  Decoder.cpp  Decoder.h  Defines.cs  Encoder.cpp  Encoder.h  H264Decoder.cs  H264Encoder.cs  H264NativeApi.cs  H264NativeApiy.Legacy.cs  H264Sharp.csproj  H264Sharp.targets  H264Sharp.vcxproj  H264Sharp.vcxproj.filters  H264SharpCore.vcxproj  ImageTypes.h  ImageTypyes.cpp  NativeBindings.cs  RuntimeScanApi.cs  codec_def.h  pch.cpp
H264SharpBitmapExtentions/: BitmapExtensions.cs  H264SharpBitmapExtentions.csproj
H264SharpNative/: AVX2Common.h  CMakeLists.txt  CMakeProject2.h  Converter.cpp  Converter.h  ConverterLocal.cpp  ConverterLocal.h  Decoder.cpp  Decoder.h  Downscale.h  EncodedFrame.h  Encoder.cpp  Encoder.h  Exports.h  H264SharpNative.vcxproj  H264SharpNative.vcxproj.filters  ImageTypes.cpp  ImageTypes.h  Logger.h  Rgb2Yuv.cpp  Rgb2Yuv.h  Rgb2YuvAVX2.cpp  Rgb2YuvNEON.cpp  Rgb2YuvSSE.cpp  ThreadPool.cpp  ThreadPool.h  TranscoderFactory.h  Yuv2Rgb.cpp  Yuv2Rgb.h  Yuv2RgbAVX2.cpp  Yuv2RgbNEON.cpp  Yuv2RgbSSE.cpp  Yuv2RgbSSE2.cpp  YuvNV12toYV12.cpp  Yuv_NV12_YV12.cpp  codec_app_def.h  codec_ver.h  concurrentbag.h  concurrentqueue.h  dllmain.cpp  (+2 more)
H264SharpPInvoke/: Data.cs  Decoder.cs  Defines.cs  Encoder.cs  H264SharpPInvoke.csproj  Licence.txt
NetCoreTest/: NetCoreTest.csproj  Program.cs
